--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
 PORT=4000
 
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=lovesm0619@@
-DB_NAME=gacha_game
+DB_USER=game_admin
+DB_PASSWORD=1234
+DB_NAME=hall_of_luck
